part2/scripts/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  selector:
    matchLabels:
      app: app1
  replicas: 1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
            - name: app1-index
              mountPath: /usr/share/nginx/html/
      volumes:
      - name: app1-index
        configMap:
          name: app1-index
---
apiVersion: v1
kind: Service
metadata:
  name: app1
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/preserve-host: "true"
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: app1
