part2/scripts/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  selector:
    matchLabels:
      app: app2
  replicas: 3
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
            - name: app2-index
              mountPath: /usr/share/nginx/html/
      volumes:
      - name: app2-index
        configMap:
          name: app2-index
---
apiVersion: v1
kind: Service
metadata:
  name: app2
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/preserve-host: "true"
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: app2
