part2/scripts/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
spec:
  selector:
    matchLabels:
      app: app3
  replicas: 1
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
            - name: app3-index
              mountPath: /usr/share/nginx/html/
      volumes:
      - name: app3-index
        configMap:
          name: app3-index
---
apiVersion: v1
kind: Service
metadata:
  name: app3
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/preserve-host: "true"
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: app3
